--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-numpy==1.16.2
-pure_python_adb==0.1.6.dev0
-yaspin==0.14.1
-tabulate==0.8.3
-requests==2.18.4
 Flask_Table==0.5.0
+requests==2.18.4
+tabulate==0.8.3
 gmplot==1.2.0
+numpy==1.16.2
+yaspin==0.14.1
 Flask==1.0.2
 SQLAlchemy==1.3.2
-adb==1.3.0
+Flask_SocketIO==3.3.2
 PyYAML==5.1
