--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Flask_Table==0.5.0
-requests==2.18.4
 tabulate==0.8.3
 gmplot==1.2.0
-numpy==1.16.2
 yaspin==0.14.1
+numpy==1.16.2
+Flask_Table==0.5.0
+matplotlib==3.0.3
 Flask==1.0.2
 SQLAlchemy==1.3.2
 Flask_SocketIO==3.3.2
+requests==2.18.4
 PyYAML==5.1
